--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>igoReason | Bookmark landing page</title>
   </head>
   <body>
-    <script src="./js/script.js"></script>
+    <div class="container">
+      <!-- header -->
+      <header>
+        <nav class="menu">
+          <!-- logo -->
+          <div id="logo">
+            <img src="./images/logo-bookmark.svg" alt="" />
+          </div>
+          <!-- menu-list -->
+          <ul class="menu-list">
+            <li><a href="#features">features</a></li>
+            <li><a href="#pricing">pricing</a></li>
+            <li><a href="#contact">contact</a></li>
+            <li><a class="loginBtn" href="#login">login</a></li>
+          </ul>
+        </nav>
+      </header>
+      <script src="./js/script.js"></script>
+    </div>
   </body>
 </html>
