--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
           </ul>
         </nav>
       </header>
+      <!-- hero section -->
+      <section class="hero">
+        <!-- text -->
+        <div class="hero-text">
+          <h1>A Simple Bookmark Manager</h1>
+          <p>
+            A clean and simple interface to organize your favourite websites.
+            Open a new browser tab and see yours sites load instantly. Try it
+            for free.
+          </p>
+          <a href="#" class="heroBtn chrome">Get it on Chrome</a>
+          <a href="#" class="heroBtn firefox">Get it on Firefox</a>
+        </div>
+        <!-- img -->
+        <div class="hero-img">
+          <img src="./images/illustration-hero.svg" alt="" />
+        </div>
+      </section>
       <script src="./js/script.js"></script>
     </div>
   </body>
