--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
           <img src="./images/illustration-hero.svg" alt="" />
         </div>
       </section>
+      <!-- features -->
+      <section class="features">
+        <h2>Features</h2>
+        <p>
+          Our aim is to make it quick and easy for you to access your favourite
+          websites. Your bookmarks sync between your devices so you can accces
+          them on the go.
+        </p>
+        <ul>
+          <li><a href="">Simple Bookmarking</a></li>
+          <li><a href="">Speedy Searching</a></li>
+          <li><a href="">Easy Sharing</a></li>
+        </ul>
+      </section>
       <script src="./js/script.js"></script>
     </div>
   </body>
