--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
           <li><a href="">Easy Sharing</a></li>
         </ul>
       </section>
+      <section class="central">
+        <div class="central-img">
+          <img src="./images/illustration-features-tab-1.svg" alt="" />
+        </div>
+        <div class="central-text">
+          <h2>Bookmark in one click</h2>
+          <p>
+            Organize your bookmarks however you like. our simple drag-0and-drop
+            interface gives you complete control over how you manage your
+            favourite sites.
+          </p>
+          <a href="#" class="centralBtn">More info</a>
+        </div>
+      </section>
       <script src="./js/script.js"></script>
     </div>
   </body>
