--- a/index.html
+++ b/index.html
@@ -82,6 +82,42 @@
           <a href="#" class="centralBtn">More info</a>
         </div>
       </section>
+      <section class="extension">
+        <div class="extension-text">
+          <h2>Download the Extension</h2>
+          <p>
+            We've got more browsers in the pipeline. Please do let us know if
+            you've got a favourite ou like us to prioritize
+          </p>
+        </div>
+        <div class="extension-cards">
+          <div class="card">
+            <img src="./images/logo-chrome.svg" alt="" class="extension-icon" />
+            <h3>Add to Chrome</h3>
+            <p>Minimum version 62</p>
+            <img src="./images/bg-dots.svg" alt="" class="dot" />
+            <button>Add & install Extension</button>
+          </div>
+          <div class="card">
+            <img
+              src="./images/logo-firefox.svg"
+              alt=""
+              class="extension-icon"
+            />
+            <h3>Add to Firefox</h3>
+            <p>Minimum version 55</p>
+            <img src="./images/bg-dots.svg" alt="" class="dot" />
+            <button>Add & install Extension</button>
+          </div>
+          <div class="card">
+            <img src="./images/logo-opera.svg" alt="" class="extension-icon" />
+            <h3>Add to Opera</h3>
+            <p>Minimum version 45</p>
+            <img src="./images/bg-dots.svg" alt="" class="dot" />
+            <button>Add & install Extension</button>
+          </div>
+        </div>
+      </section>
       <script src="./js/script.js"></script>
     </div>
   </body>
