--- a/index.html
+++ b/index.html
@@ -118,7 +118,54 @@
           </div>
         </div>
       </section>
-      <script src="./js/script.js"></script>
+      <section class="faq">
+        <div class="faq-text">
+          <h2>Frequently Asked Questions</h2>
+          <p>
+            Here are some of our FAQ's. If you have any other questions
+            you'dlike answered please feel free to email us.
+          </p>
+        </div>
+        <div class="faq-list">
+          <dl>
+            <dt>
+              What is Bookmark?
+              <img src="./images/icon-arrow.svg" alt="" />
+            </dt>
+            <dd>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Accusamus, eaque!
+            </dd>
+            <dt>
+              How can i request a new browser?
+              <img src="./images/icon-arrow.svg" alt="" />
+            </dt>
+            <dd>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Accusamus, eaque!
+            </dd>
+            <dt>
+              Is there a mobile app?
+              <img src="./images/icon-arrow.svg" alt="" />
+            </dt>
+            <dd>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Accusamus, eaque!
+            </dd>
+            <dt>
+              What about other Chromium Browsers?
+              <img src="./images/icon-arrow.svg" alt="" />
+            </dt>
+            <dd>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Accusamus, eaque!
+            </dd>
+          </dl>
+          <a href="#">More info</a>
+        </div>
+
+        <script src="./js/script.js"></script>
+      </section>
     </div>
   </body>
 </html>
