--- a/index.html
+++ b/index.html
@@ -167,5 +167,17 @@
         <script src="./js/script.js"></script>
       </section>
     </div>
+    <section class="newsletter">
+      <div class="bg">
+        <div class="news-wrapper">
+          <span>35,000+ already joined</span>
+          <h3>Stay up-to-date with what we're doing</h3>
+          <form class="news-form">
+            <input type="text" placeholder="Enter your email address" />
+            <button type="submit">Contact Us</button>
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
