--- a/index.html
+++ b/index.html
@@ -179,5 +179,25 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="footer-list">
+          <ul class="footer-list-nav">
+            <img src="./images/white-bookmark.svg" alt="" />
+            <li><a href="#features">features</a></li>
+            <li><a href="#features">pricing</a></li>
+            <li><a href="#features">contact</a></li>
+          </ul>
+          <ul class="footer-social">
+            <li>
+              <a href="#"><img src="./images/icon-facebook.svg" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./images/icon-twitter.svg" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
