--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <li><a href="">Easy Sharing</a></li>
         </ul>
       </section>
+      <!-- central -->
       <section class="central">
         <div class="central-img">
           <img src="./images/illustration-features-tab-1.svg" alt="" />
@@ -75,13 +76,14 @@
         <div class="central-text">
           <h2>Bookmark in one click</h2>
           <p>
-            Organize your bookmarks however you like. our simple drag-0and-drop
+            Organize your bookmarks however you like. our simple drag-and-drop
             interface gives you complete control over how you manage your
             favourite sites.
           </p>
           <a href="#" class="centralBtn">More info</a>
         </div>
       </section>
+      <!-- extension -->
       <section class="extension">
         <div class="extension-text">
           <h2>Download the Extension</h2>
@@ -118,6 +120,7 @@
           </div>
         </div>
       </section>
+      <!-- faq -->
       <section class="faq">
         <div class="faq-text">
           <h2>Frequently Asked Questions</h2>
@@ -167,6 +170,7 @@
         <script src="./js/script.js"></script>
       </section>
     </div>
+    <!-- newsletter -->
     <section class="newsletter">
       <div class="bg">
         <div class="news-wrapper">
@@ -179,6 +183,7 @@
         </div>
       </div>
     </section>
+    <!-- footer -->
     <footer>
       <div class="container">
         <div class="footer-list">
