--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <img src="./images/logo-bookmark.svg" alt="" />
           </div>
           <!-- menu-list -->
-          <ul class="menu-list">
+          <ul class="menu-list" data-anime="smooth">
             <li><a href="#features">features</a></li>
-            <li><a href="#pricing">pricing</a></li>
+            <li><a href="#faq">faq</a></li>
             <li><a href="#contact">contact</a></li>
-            <li><a class="loginBtn" href="#login">login</a></li>
+            <li><a class="loginBtn">login</a></li>
           </ul>
         </nav>
       </header>
@@ -55,7 +55,7 @@
         </div>
       </section>
       <!-- features -->
-      <section class="features">
+      <section class="features" id="features">
         <h2>Features</h2>
         <p>
           Our aim is to make it quick and easy for you to access your favourite
@@ -121,7 +121,7 @@
         </div>
       </section>
       <!-- faq -->
-      <section class="faq">
+      <section class="faq" id="faq">
         <div class="faq-text">
           <h2>Frequently Asked Questions</h2>
           <p>
@@ -166,12 +166,10 @@
           </dl>
           <a href="#">More info</a>
         </div>
-
-        <script src="./js/script.js"></script>
       </section>
     </div>
     <!-- newsletter -->
-    <section class="newsletter">
+    <section class="newsletter" id="contact">
       <div class="bg">
         <div class="news-wrapper">
           <span>35,000+ already joined</span>
@@ -204,5 +202,6 @@
         </div>
       </div>
     </footer>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
