--- a/index.html
+++ b/index.html
@@ -130,35 +130,23 @@
           </p>
         </div>
         <div class="faq-list">
-          <dl>
-            <dt>
-              What is Bookmark?
-              <img src="./images/icon-arrow.svg" alt="" />
-            </dt>
+          <dl data-anime="accordion">
+            <dt>What is Bookmark?</dt>
             <dd>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Accusamus, eaque!
             </dd>
-            <dt>
-              How can i request a new browser?
-              <img src="./images/icon-arrow.svg" alt="" />
-            </dt>
+            <dt>How can i request a new browser?</dt>
             <dd>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Accusamus, eaque!
             </dd>
-            <dt>
-              Is there a mobile app?
-              <img src="./images/icon-arrow.svg" alt="" />
-            </dt>
+            <dt>Is there a mobile app?</dt>
             <dd>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Accusamus, eaque!
             </dd>
-            <dt>
-              What about other Chromium Browsers?
-              <img src="./images/icon-arrow.svg" alt="" />
-            </dt>
+            <dt>What about other Chromium Browsers?</dt>
             <dd>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Accusamus, eaque!
