--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <img src="./images/logo-bookmark.svg" alt="" />
           </div>
           <!-- menu-list -->
-          <ul class="menu-list" data-anime="smooth">
+          <a href="#" data-menu="hamburguer" class="menuMobile">
+            <img src="./images/icon-hamburger.svg" alt="" />
+          </a>
+          <ul class="menu-list" data-anime="smooth" data-menu="list">
             <li><a href="#features">features</a></li>
             <li><a href="#faq">faq</a></li>
             <li><a href="#contact">contact</a></li>
