--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>igoReason | Bookmark landing page</title>
+    <title>Igor Tozetti | Bookmark landing page</title>
   </head>
   <body>
     <div class="container">
       <!-- header -->
       <header>
         <nav class="menu">
-          <!-- logo -->
           <div id="logo">
             <img src="./images/logo-bookmark.svg" alt="" />
           </div>
-          <!-- menu-list -->
           <a href="#" data-menu="hamburguer" class="menuMobile">
-            <img src="./images/icon-hamburger.svg" alt="" />
+            <img src="./images/icon-hamburger.svg" alt="icon-hamburguer" />
           </a>
           <ul class="menu-list" data-anime="smooth" data-menu="list">
             <li><a href="#features">features</a></li>
@@ -54,7 +52,7 @@
         </div>
         <!-- img -->
         <div class="hero-img">
-          <img src="./images/illustration-hero.svg" alt="" />
+          <img src="./images/illustration-hero.svg" alt="hero illustration" />
         </div>
       </section>
       <!-- features -->
@@ -74,7 +72,10 @@
       <!-- central -->
       <section class="central">
         <div class="central-img">
-          <img src="./images/illustration-features-tab-1.svg" alt="" />
+          <img
+            src="./images/illustration-features-tab-1.svg"
+            alt="features illustration"
+          />
         </div>
         <div class="central-text">
           <h2>Bookmark in one click</h2>
@@ -97,28 +98,36 @@
         </div>
         <div class="extension-cards">
           <div class="card">
-            <img src="./images/logo-chrome.svg" alt="" class="extension-icon" />
+            <img
+              src="./images/logo-chrome.svg"
+              alt="logo-chrome"
+              class="extension-icon"
+            />
             <h3>Add to Chrome</h3>
             <p>Minimum version 62</p>
-            <img src="./images/bg-dots.svg" alt="" class="dot" />
+            <img src="./images/bg-dots.svg" alt="dot-chrome" class="dot" />
             <button>Add & install Extension</button>
           </div>
           <div class="card">
             <img
               src="./images/logo-firefox.svg"
-              alt=""
+              alt="logo-firefox"
               class="extension-icon"
             />
             <h3>Add to Firefox</h3>
             <p>Minimum version 55</p>
-            <img src="./images/bg-dots.svg" alt="" class="dot" />
+            <img src="./images/bg-dots.svg" alt="dot-firefox" class="dot" />
             <button>Add & install Extension</button>
           </div>
           <div class="card">
-            <img src="./images/logo-opera.svg" alt="" class="extension-icon" />
+            <img
+              src="./images/logo-opera.svg"
+              alt="logo-opera"
+              class="extension-icon"
+            />
             <h3>Add to Opera</h3>
             <p>Minimum version 45</p>
-            <img src="./images/bg-dots.svg" alt="" class="dot" />
+            <img src="./images/bg-dots.svg" alt="dot-opera" class="dot" />
             <button>Add & install Extension</button>
           </div>
         </div>
@@ -184,10 +193,14 @@
           </ul>
           <ul class="footer-social">
             <li>
-              <a href="#"><img src="./images/icon-facebook.svg" alt="" /></a>
+              <a href="#"
+                ><img src="./images/icon-facebook.svg" alt="facebook-icon"
+              /></a>
             </li>
             <li>
-              <a href="#"><img src="./images/icon-twitter.svg" alt="" /></a>
+              <a href="#"
+                ><img src="./images/icon-twitter.svg" alt="twitter-icon"
+              /></a>
             </li>
           </ul>
         </div>
